Replace supplementary information by extended data

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -707,70 +707,7 @@ For the characterization of the CF, I chose the bending rigidity of the blastode
 </tbody>
 </table>
 </div>
-<div id="tbl:screen" class="tablenos">
-<table>
-<caption><span>Table 4:</span> Summary of live-imaging screening results for cephalic furrow genes. </caption>
-<colgroup>
-<col style="width: 11%" />
-<col style="width: 17%" />
-<col style="width: 44%" />
-<col style="width: 26%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th>gene name</th>
-<th>gene symbol</th>
-<th>allele/deficiency</th>
-<th>phenotype</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td><em>buttonhead</em></td>
-<td><em>btd</em></td>
-<td><em>btd</em><sup>XA</sup></td>
-<td>absent<span class="citation" data-cites="Vincent1997-fa"><sup><a href="#ref-Vincent1997-fa" role="doc-biblioref">7</a></sup></span></td>
-</tr>
-<tr class="even">
-<td><em>even skipped</em></td>
-<td><em>eve</em></td>
-<td><em>eve</em><sup>3</sup></td>
-<td>absent<span class="citation" data-cites="Vincent1997-fa"><sup><a href="#ref-Vincent1997-fa" role="doc-biblioref">7</a></sup></span></td>
-</tr>
-<tr class="odd">
-<td><em>paired</em></td>
-<td><em>prd</em></td>
-<td><em>prd</em><sup>4</sup></td>
-<td>delayed<span class="citation" data-cites="Blankenship2001-tm"><sup><a href="#ref-Blankenship2001-tm" role="doc-biblioref">14</a></sup></span> and abnormal</td>
-</tr>
-<tr class="even">
-<td><em>sloppy paired 1</em> and <em>2</em></td>
-<td><em>slp1</em>, <em>slp2</em></td>
-<td><em>slp</em><sup>Δ34B</sup></td>
-<td>delayed and displaced anteriorly</td>
-</tr>
-<tr class="odd">
-<td><em>sloppy paired 1</em></td>
-<td><em>slp1</em></td>
-<td><em>slp1</em><sup>1</sup></td>
-<td>delayed and displaced anteriorly</td>
-</tr>
-<tr class="even">
-<td><em>giant</em></td>
-<td><em>gt</em></td>
-<td><em>gt</em><sup>X11</sup></td>
-<td>perturbed formation</td>
-</tr>
-<tr class="odd">
-<td><em>knirps</em>, <em>knirps-like</em></td>
-<td><em>kni</em>, <em>knrl</em></td>
-<td>Df(3L)BSC448</td>
-<td>ventral portion displaced anteriorly</td>
-</tr>
-</tbody>
-</table>
-</div>
-<h1 id="supplementary-information">Supplementary information</h1>
+<h1 id="extended-data">Extended data</h1>
 <h2 id="figures-1">Figures</h2>
 <div id="fig:initiator" class="fignos">
 <figure>
@@ -854,6 +791,70 @@ For the characterization of the CF, I chose the bending rigidity of the blastode
 </figure>
 </div>
 <!--TODO: Fix the time to show countdown to gastrulation-->
+<h2 id="tables-1">Tables</h2>
+<div id="tbl:screen" class="tablenos">
+<table>
+<caption><span>Table 4:</span> Summary of live-imaging screening results for cephalic furrow genes. </caption>
+<colgroup>
+<col style="width: 20%" />
+<col style="width: 25%" />
+<col style="width: 34%" />
+<col style="width: 20%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th>gene name</th>
+<th>gene symbol</th>
+<th>allele/deficiency</th>
+<th>phenotype</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><em>buttonhead</em></td>
+<td><em>btd</em></td>
+<td><em>btd</em><sup>XA</sup></td>
+<td>absent<span class="citation" data-cites="Vincent1997-fa"><sup><a href="#ref-Vincent1997-fa" role="doc-biblioref">7</a></sup></span></td>
+</tr>
+<tr class="even">
+<td><em>even skipped</em></td>
+<td><em>eve</em></td>
+<td><em>eve</em><sup>3</sup></td>
+<td>absent<span class="citation" data-cites="Vincent1997-fa"><sup><a href="#ref-Vincent1997-fa" role="doc-biblioref">7</a></sup></span></td>
+</tr>
+<tr class="odd">
+<td><em>paired</em></td>
+<td><em>prd</em></td>
+<td><em>prd</em><sup>4</sup></td>
+<td>delayed<span class="citation" data-cites="Blankenship2001-tm"><sup><a href="#ref-Blankenship2001-tm" role="doc-biblioref">14</a></sup></span> and abnormal</td>
+</tr>
+<tr class="even">
+<td><em>sloppy paired 1</em> and <em>2</em></td>
+<td><em>slp1</em>, <em>slp2</em></td>
+<td><em>slp</em><sup>Δ34B</sup></td>
+<td>delayed and displaced anteriorly</td>
+</tr>
+<tr class="odd">
+<td><em>sloppy paired 1</em></td>
+<td><em>slp1</em></td>
+<td><em>slp1</em><sup>1</sup></td>
+<td>delayed and displaced anteriorly</td>
+</tr>
+<tr class="even">
+<td><em>giant</em></td>
+<td><em>gt</em></td>
+<td><em>gt</em><sup>X11</sup></td>
+<td>perturbed formation</td>
+</tr>
+<tr class="odd">
+<td><em>knirps</em>, <em>knirps-like</em></td>
+<td><em>kni</em>, <em>knrl</em></td>
+<td>Df(3L)BSC448</td>
+<td>ventral portion displaced anteriorly</td>
+</tr>
+</tbody>
+</table>
+</div>
 <section class="footnotes" role="doc-endnotes">
 <hr />
 <ol>
