Prepare terrain for comparative expression patterns

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -153,6 +153,13 @@
 <!--TODO: Describe narrowing of btd--eve overlap to a single row-->
 <!--- slp as well shows some adhesive differences.-->
 <h3 id="novel-btd-headtrunk-domain-associated-with-cephalic-furrow">Novel <em>btd</em> head–trunk domain associated with cephalic furrow</h3>
+<!--TODO: Update text to reflect the four species studied-->
+<!--TODO: First mention early expression fairly similar-->
+<!--TODO: Put early expression patterns Ccap, Aste, Calb on new extended data-->
+<!--TODO: Put representative images of early patterns on main figure-->
+<!--TODO: Add lateral head view for the four species-->
+<!--TODO: Add profile view for the four species-->
+<!--TODO: Complete the schematics with combinatorial pattern-->
 <!--Head--trunk boundary slp/eve expression is conserved-->
 <!--Clogmia lacks the head--trunk domain of btd-->
 <!--the dipteran fly *Clogmia albipunctata*, a species from the basally-branching Psychodidae family which has no cephalic furrow [@Jimenez-Guri2014-zs; @Dey2023-mo].-->
@@ -911,7 +918,14 @@
 <h2 id="extended-data-fig.-6">Extended Data Fig. 6</h2>
 <div id="fig:genetic-features" class="fignos">
 <figure>
-<img src="figures/EDFig6.jpg" data-tag="Extended Data Fig. 6" style="width:100.0%" alt="" /><figcaption><span>Figure Extended Data Fig. 6:</span> Additional genetic patterning of the head–trunk boundary. <strong>a</strong>, Expression of <em>btd</em> and <em>eve</em> in wildtype and <em>slp</em> mutants at mid and late mitotic cycle 14.</figcaption>
+<img src="figures/EDFig6.jpg" data-tag="Extended Data Fig. 6" style="width:100.0%" alt="" /><figcaption><span>Figure Extended Data Fig. 6:</span> Additional genetic patterning of the head–trunk boundary in <em>Drosophila</em>. <strong>a</strong>, Expression of <em>btd</em> and <em>eve</em> in wildtype and <em>slp</em> mutants at mid and late mitotic cycle 14.</figcaption>
+</figure>
+</div>
+<div style=""></div>
+<h2 id="extended-data-fig.-7">Extended Data Fig. 7</h2>
+<div id="fig:genetic-comparative" class="fignos">
+<figure>
+<img src="figures/EDFig7.jpg" data-tag="Extended Data Fig. 7" style="width:100.0%" alt="" /><figcaption><span>Figure Extended Data Fig. 7:</span> Additional genetic patterning of the head–trunk boundary in other species. <strong>a</strong>, Expression of…</figcaption>
 </figure>
 </div>
 <div style=""></div>
