--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1135,6 +1135,19 @@
 <td style="text-align: right;"></td>
 <td style="text-align: center;">−/−</td>
 <td style="text-align: right;">13</td>
+<td style="text-align: center;">CF</td>
+<td style="text-align: right;">0</td>
+<td style="text-align: right;">0%</td>
+<td style="text-align: right;">0%</td>
+<td style="text-align: right;">0%</td>
+<td style="text-align: right;">0%</td>
+<td style="text-align: right;">0</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: right;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
 <td style="text-align: center;">EF</td>
 <td style="text-align: right;">12</td>
 <td style="text-align: right;">92.3%</td>
@@ -1143,7 +1156,7 @@
 <td style="text-align: right;">75%</td>
 <td style="text-align: right;">2.2±0.4</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: left;"><em>eve</em></td>
 <td style="text-align: right;">36</td>
 <td style="text-align: center;">+/−</td>
@@ -1156,7 +1169,7 @@
 <td style="text-align: right;">0%</td>
 <td style="text-align: right;">1.0±0.0</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: left;"></td>
 <td style="text-align: right;"></td>
 <td style="text-align: center;"></td>
@@ -1169,11 +1182,24 @@
 <td style="text-align: right;">85.7%</td>
 <td style="text-align: right;">1.0±0.0</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: left;"></td>
 <td style="text-align: right;"></td>
 <td style="text-align: center;">−/−</td>
 <td style="text-align: right;">10</td>
+<td style="text-align: center;">CF</td>
+<td style="text-align: right;">0</td>
+<td style="text-align: right;">0%</td>
+<td style="text-align: right;">0%</td>
+<td style="text-align: right;">0%</td>
+<td style="text-align: right;">0%</td>
+<td style="text-align: right;">0</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: right;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
 <td style="text-align: center;">EF</td>
 <td style="text-align: right;">10</td>
 <td style="text-align: right;">100%</td>
