Add scale bar to video 1

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1355,10 +1355,9 @@
 <!--TODO: Lower speed Vid9-->
 <div id="fig:vid-initiator" class="fignos">
 <figure>
-<img src="figures/Vid1.jpg" data-tag="Supplementary Video 1" style="width:50.0%" alt="Figure Supplementary Video 1: Reduced apical constriction in btd mutants. Lateral view (left) and cartographic projection (right) of the head–trunk interface in four individual btd mutants. Putative initiator cells (center) exhibit a reduced degree of apical constriction. The video is looped to highlight the changes in apical cell area. Frame rate = 10fps." /><figcaption aria-hidden="true"><span>Figure Supplementary Video 1:</span> Reduced apical constriction in <em>btd</em> mutants. Lateral view (left) and cartographic projection (right) of the head–trunk interface in four individual <em>btd</em> mutants. Putative initiator cells (center) exhibit a reduced degree of apical constriction. The video is looped to highlight the changes in apical cell area. Frame rate = 10fps.</figcaption>
+<img src="figures/Vid1.jpg" data-tag="Supplementary Video 1" style="width:50.0%" alt="Figure Supplementary Video 1: Reduced apical constriction in btd mutants. Lateral view (left) and cartographic projection (right) of the head–trunk interface in four individual btd mutants. Putative initiator cells (center) exhibit a reduced degree of apical constriction. The video is looped to highlight the changes in apical cell area. Frame rate = 10 fps. Scale bar = 50 µm." /><figcaption aria-hidden="true"><span>Figure Supplementary Video 1:</span> Reduced apical constriction in <em>btd</em> mutants. Lateral view (left) and cartographic projection (right) of the head–trunk interface in four individual <em>btd</em> mutants. Putative initiator cells (center) exhibit a reduced degree of apical constriction. The video is looped to highlight the changes in apical cell area. Frame rate = 10 fps. Scale bar = 50 µm.</figcaption>
 </figure>
 </div>
-<!--TODO: Add scale bars-->
 <div style=""></div>
 <h2 id="supplementary-video-2">Supplementary Video 2</h2>
 <div id="fig:vid-lateral-btd" class="fignos">
