Add reminder to reduce figure legends

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1280,6 +1280,7 @@
 </div>
 <div style=""></div>
 <h2 id="extended-data-fig.-2">Extended Data Fig. 2</h2>
+<!--TODO: Reduce figure legend-->
 <!--**e**, Angle directionality and tortuosity during cephalic furrow and ectopic fold formation. Within the first fifteen minutes after gastrulation, the cephalic furrow exhibits a typical posterior shift on the dorsal side which declines the initial angle of the invagination from 80° to about 60° in relation to the anteroposterior axis. During this period, the invagination begins as a straight line and bends showing a correspondent increase in the measured tortuosity values of the furrow outline. In contrast, ectopic folds show no obvious trend in angular direction tortuosity values over time. For both angle and tortuosity analysis, n = 6.-->
 <div id="fig:ectopic-features" class="fignos">
 <figure>
