--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -382,7 +382,32 @@
 <h2 id="statistics-and-reproducibility">Statistics and reproducibility</h2>
 <p>In all box plots, the center represents the median, the lower and upper hinges correspond to the first and third quartiles (25 and 75th percentiles), and the whiskers extend from the hinges until 1.5 times the inter-quartile range. Asterisks indicate p&lt;0.05 in a two-sided Mann–Whitney <em>U</em> test contrasting the condition against wildtype, unless otherwise noted in the correspondent figure legend. We report p values rounded to three decimal places and show values lower than 0.001 as p&lt;0.001; the exact values with full decimal places for each contrast are available in the data repository.<span class="citation" data-cites="Vellutini2023-ng"><sup><a href="#ref-Vellutini2023-ng" role="doc-biblioref">36</a></sup></span></p>
 <p>The phenotypes we report in this work were reproducible across multiple experiments. For the live imaging, we performed 7 independent experiments in <em>btd</em> mutants (total of 50 embryos), 5 independent experiments in <em>eve</em> mutants (total of 36 embryos), 3 independent experiments in <em>prd</em> mutants (total of 41 embryos), 6 independent experiments in <em>slp</em> mutants (total of 39 embryos), 3 independent experiments in <em>stg</em> mutants (total of 46 embryos), 6 independent experiments in <em>btd–eve</em> double mutants (total of 35 embryos), and 2 independent experiments in wildtype embryos (total of 36 embryos). For the germ band cauterization, we performed 6 independent experiments in <em>btd</em> mutants (total of 10 embryos), 4 independent experiments in <em>eve</em> mutants (total of 9 embryos), and 7 independent experiments in wildtype embryos (total of 11 embryos).</p>
-<!--TODO: Add remaining experiments here, perhaps by figure panel-->
+<!--TODO: Add gene expression experiments above-->
+<!--TODO: Add remaining experiments here-->
+<!--TODO: Add experiments by figure panel-->
+<!--{@fig:ectopic-folding}b lateral btd eve-->
+<!--{@fig:ectopic-folding}c dorsal wt prd btd eve-->
+<!--{@fig:live-experiments}a lateral dorsal stg-->
+<!--{@fig:live-experiments}b lateral dorsal btd-->
+<!--{@fig:live-experiments}c lateral dorsal btd--stg-->
+<!--{@fig:live-experiments}d lightsheet cauterization wt-->
+<!--{@fig:live-experiments}e lightsheet cauterization eve-->
+<!--{@fig:live-experiments}h confocal cauterization btd eve-->
+<!--{@fig:initiator}a dorsal wt prd btd eve-->
+<!--{@fig:initiator}b lateral wt prd btd eve-->
+<!--{@fig:ectopic-features}a,b,k,l lateral wt prd btd eve-->
+<!--{@fig:ectopic-features}h dorsal btd-->
+<!--{@fig:mitotic-strain}a lateral wt btd eve-->
+<!--{@fig:mitotic-strain}b lateral wt btd eve-->
+<!--{@fig:mitotic-strain}e lateral btd -->
+<!--{@fig:mitotic-strain}g tissue cuts wt -->
+<!--{@fig:stg} lateral dorsal stg-->
+<!--{@fig:slp-analyses}a lateral slp-->
+<!--{@fig:slp-analyses}b--h hcr slp-->
+<!--{@fig:genetic-features}a hcr wt-->
+<!--{@fig:genetic-features}b hcr prd on wt -->
+<!--{@fig:mutant-expression} hcr btd eve prd-->
+<!--{@fig:genetic-comparative} hcr same as before-->
 <h2 id="data-availability">Data availability</h2>
 <ul>
 <li>Main repository with data, analyses, figures, and text source files: <a href="https://zenodo.org/record/7781947">zenodo.org/record/7781947</a>.<span class="citation" data-cites="Vellutini2023-ng"><sup><a href="#ref-Vellutini2023-ng" role="doc-biblioref">36</a></sup></span></li>
