Add scale bar to legend of ectopic variability

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1469,7 +1469,7 @@
 <h2 id="supplementary-figure-1">Supplementary Figure 1</h2>
 <div id="fig:ectopic-variability" class="fignos">
 <figure>
-<img src="figures/FigS1.jpg" data-tag="Supplementary Fig. 1" style="width:100.0%" alt="Figure Supplementary Fig. 1: Individual variability of ectopic folding in btd and eve mutants. Cephalic furrow and ectopic folds are traced in white lines. The combined views illustrate the position of folding overlaid over a single embryo after embryo registration." /><figcaption aria-hidden="true"><span>Figure Supplementary Fig. 1:</span> Individual variability of ectopic folding in <em>btd</em> and <em>eve</em> mutants. Cephalic furrow and ectopic folds are traced in white lines. The combined views illustrate the position of folding overlaid over a single embryo after embryo registration.</figcaption>
+<img src="figures/FigS1.jpg" data-tag="Supplementary Fig. 1" style="width:100.0%" alt="Figure Supplementary Fig. 1: Individual variability of ectopic folding in btd and eve mutants. Cephalic furrow and ectopic folds are traced in white lines. The combined views illustrate the position of folding overlaid over a single embryo after embryo registration. Scale bars = 50 µm." /><figcaption aria-hidden="true"><span>Figure Supplementary Fig. 1:</span> Individual variability of ectopic folding in <em>btd</em> and <em>eve</em> mutants. Cephalic furrow and ectopic folds are traced in white lines. The combined views illustrate the position of folding overlaid over a single embryo after embryo registration. Scale bars = 50 µm.</figcaption>
 </figure>
 </div>
 <div style=""></div>
