Add competing interests statement

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -837,6 +837,8 @@
 <p>This work was supported by the MPI-CBG core funding from CDM and PT laboratories and by a European Research Council Advanced Grant (ERC-AdG 885504 GHOSTINTHESHELL) awarded to PT. AS was supported by funding from the European Union’s Horizon 2020 Research and Innovation Programme under grant agreement no. 829010 (PRIME). BCV was supported by an EMBO Long-Term Fellowship (ALTF 74-2018).</p>
 <h1 id="author-contributions">Author contributions</h1>
 <p>BCV and PT conceived the study. BCV designed experiments, generated fly stocks, acquired microscopy data, performed <em>in situ</em> hybridization, and processed and analyzed the <em>in vivo</em> data. MBC conceived and conducted the laser ablation and cauterization experiments and analyzed the laser ablation and strain rate data. CDM, AK, and AS designed the model. AK and AS programmed the model, performed the simulations, and analyzed the <em>in silico</em> data. BCV wrote the initial versions of the manuscript. All authors revised and contributed to the text. BCV and PT polished the final version.</p>
+<h1 id="competing-interests">Competing interests</h1>
+<p>The authors declare no competing interests.</p>
 <div style=""></div>
 <h1 id="figures">Figures</h1>
 <!--TODO: Reduce legends adding relevant information-->
