Add section with requested additional information

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -837,6 +837,15 @@
 <p>BCV and PT conceived the study. BCV designed experiments, generated fly stocks, acquired microscopy data, performed <em>in situ</em> hybridization, and processed and analyzed the <em>in vivo</em> data. MBC conceived and conducted the laser ablation and cauterization experiments and analyzed the laser ablation and strain rate data. CDM, AK, and AS designed the model. AK and AS programmed the model, performed the simulations, and analyzed the <em>in silico</em> data. BCV wrote the initial versions of the manuscript. All authors revised and contributed to the text. BCV and PT polished the final version.</p>
 <h1 id="competing-interests">Competing interests</h1>
 <p>The authors declare no competing interests.</p>
+<h1 id="additional-information">Additional information</h1>
+<h2 id="supplementary-information">Supplementary Information</h2>
+<p>Supplementary Information is available for this paper.</p>
+<h2 id="correspondence-and-requests-for-materials">Correspondence and requests for materials</h2>
+<p>Correspondence and requests for materials should be addressed to Bruno C. Vellutini or Pavel Tomancak.</p>
+<h2 id="peer-review-information">Peer review information</h2>
+<p>Nature thanks…</p>
+<h2 id="reprints-and-permissions-information">Reprints and permissions information</h2>
+<p>Reprints and permissions information is available at <a href="https://www.nature.com/reprints">https://www.nature.com/reprints</a>.</p>
 <div style=""></div>
 <h1 id="figures">Figures</h1>
 <!--TODO: Reduce legends adding relevant information-->
@@ -1713,7 +1722,7 @@
 </figure>
 </div>
 <div style=""></div>
-<h1 id="supplementary-information">Supplementary information</h1>
+<h1 id="supplementary-information-1">Supplementary information</h1>
 <!--TODO: Add supplementary guide here (index)-->
 <div style=""></div>
 <h2 id="supplementary-figure-1">Supplementary Figure 1</h2>
